# apiresolver

./: amazflixhd.py  animes.py  aovivogratis.py  canalricos.py  dailymotion.py  db.py  elevensports.py  fastdrive.py  filmebrasil.py  filmeflix.py  generator.py  gg.py  google.py  jovempan.py  main.py  ok.py  pandafiles.py  proxy.py  pyproject.toml  rcresolver.py  regexgenerator.py  sportsonline.py  streamtape.py  superflix.py  videobin.py
templates/: index.html  login.html  login_home.html  movies.html  tvshows.html
